objects/Insurance__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Detailed feedback</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Policy holder</description>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Insurances</relationshipLabel>
        <relationshipName>Insurances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Coverage end</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FVehicles__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Insured vehicle</description>
        <label>FVehicles</label>
        <referenceTo>FVehicles__c</referenceTo>
        <relationshipLabel>Insurances</relationshipLabel>
        <relationshipName>Insurances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <label>Policy Number</label>
        <length>13</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium__c</fullName>
        <description>Annual premium</description>
        <label>Premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Insurance company</description>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Insurances</relationshipLabel>
        <relationshipName>Insurances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>1 to 5 rating</description>
        <label>Rating</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <label>Related To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Test Drive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Coverage start</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <description>Date of submission</description>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <label>Insurance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Insurance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>